2018-08-18  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* gkhuge.test: More strict test.
	* tests/gkhugeng.err: Added.
	* am/uptex.am: Adjust.

2018-06-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ksnji.h, kanji.c, uptex.defines:
	remove sjisterminal (w32 only).

2018-02-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uptex-m.ch, kanji.c:
	Update reference of Unicode blocks to
	"Blocks-10.0.0.txt Date: 2017-04-12, 17:30:00 GMT [KW]".
	Exclude Latin-1 letters from "Latin-1 Supplement" block.
	Set kcatcode of "Latin-1 letters", "Latin Extended-A" 15 (not_cjk).
	* uptex-m.ch, upbibtex.ch, updvitype.ch, uppltotf.ch, uptftopl.ch,
	uptex_version.h: upTeX version u1.23.
	* COPYRIGHT, COPYRIGHT.ja:
	Update copyright year.

2018-02-02  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* uppltotf.ch: Adapt to changes in ptexdir/ppltotf.ch.
	* am/uptex.am: Add new tests.
	* gkhuge.test, tests/gkhuge.tex, tests/gkhuge{ok,ng}.tfm,
	  uparse.test, tests/uparse.{pl,tfm} : New test files.

2018-01-31  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* uptex-m.ch: Adapt to changes in ptexdir/ptex-base.ch (disp_node).

2018-01-27  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* uppltotf.ch, uptftopl.ch, uptex-m.ch: Adapt to the new JFM spec.
	* am/uptex.am: Add new tests.
	* newjfm.test, tests/testnewu.{pl,tfm}: New test files.

2018-01-21  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* yokotate.test, tests/{,u}[,t]min10.[pl,tfm], am/uptex.am:
	More suitable tests.

2018-01-21  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* uptex-m.ch: New primitives: \uptexversion and \uptexrevision.

2017-04-24  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* uptex-m.ch: Adapt to changes in ptexdir/ptex-base.ch (p\TeX -> \pTeX).

2017-04-09  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* uptex-m.ch: Fix a bug on a UTF-8 sequence at end of a line
	when \endlinechar=-1.

2017-01-15  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uptex-m.ch, kanji.c: